fix(TeacherSection): brand icons now wrap next line

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@
     --color-brand-gray: #999999;
     --color-brand-gray-light: #dddddd;
     --color-brand-grey-white: #f2f2f2;
+    --color-brand-gray-p: #f2f1fa;
 
     /* 🎨 Colores de Estado */
     --color-info: #2580d5;
